--- a/Web Development Bootcamp/Sec-6,7 Bootsrap/index.html
+++ b/Web Development Bootcamp/Sec-6,7 Bootsrap/index.html
@@ -15,6 +15,9 @@
 
   <!-- css -->
   <link rel="stylesheet" href="css/style.css">
+  
+   <!-- favicon -->
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
 </head>
 
